--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Your awesome title
+title: EvoAgent Log
 author: ValerioB88
-email: your-email@domain.com
+email: valerio.biscione@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Blabla
+  A page/blog/resource site about EvoAgent
 theme: minima
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  ValerioB88 # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
